# TodoBliss

./: README.md  compose.yaml
fastapi_todo/: .env  Dockerfile.dev  main.py  pyproject.toml  settings.py
fastapi_todo/.github/workflows/: deploy.yml
fastapi_todo/app/: main.py  settings.py
fastapi_todo/app/auth/: auth.py
fastapi_todo/app/controllers/: auth_controllers.py  user_controllers.py
fastapi_todo/app/database/: database.py
fastapi_todo/app/database/.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _heapq.data.json  _heapq.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _stat.data.json  _stat.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  _winapi.data.json  _winapi.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  (+178 more)
fastapi_todo/app/database/.mypy_cache/3.12/_typeshed/: __init__.data.json  __init__.meta.json  wsgi.data.json  wsgi.meta.json
fastapi_todo/app/database/.mypy_cache/3.12/anyio/: __init__.data.json  (+7 more)
fastapi_todo/app/models/: models.py
fastapi_todo/database/: database.py
fastapi_todo/models/: models.py
(+901 files in other folders)
